# more.tech_coolteamname_oct_2023

./: .gitignore  .pre-commit-config.yaml  README.md  arch.drawio  docker-compose.yaml  pyproject.toml
analyze/: find_line_time.py
analyze/data_for_analyze/generate/: generate.py
analyze/generate/: generate.py
backend/: .dockerignore  DockerfileWeb  Makefile  docker-compose-dev.yaml  docker-compose.yaml  main.ipynb  pyproject.toml
backend/app/: upload_entrypoint.py  web_entrypoint.py
backend/app/data/redis/: dump.rdb
backend/app/persistence/: database.py
backend/app/presentation/web/: main.py  router.py  schemas.py
backend/app/repository/: db_repository.py
backend/app/schemas/: atm.py  base.py  dates.py  geo.py  office.py  search.py
backend/app/service/: heath_service.py  metro.json  upload_service.py  view_service.py
backend/app/shared/: containers.py  settings.py
backend/app/supplier/: ort_supplier.py
backend/app/tests/: conftest.py  integration_test.py
backend/extra/: Makefile  init.sql  raw_nginx  raw_nginx.conf  ssl_nginx  ssl_nginx.conf
frontend/: deploy.sh  index.html  package.json  tsconfig.json
frontend/src/: App.scss  App.tsx  index.scss  main.tsx  store.tsx
frontend/src/assets/: index.ts
frontend/src/components/: Button.scss  Button.tsx  Checkbox.scss  Checkbox.tsx  Input.scss  Input.tsx  LocationMarker.tsx  MenuContainer.scss  MenuContainer.tsx  SearchResult.scss  SearchResult.tsx  SelectButtons.scss  SelectButtons.tsx  ServiceLoad.scss  ServiceLoad.tsx  SettingsButton.scss  SettingsButton.tsx  index.ts
frontend/src/pages/: AtmFilters.scss  AtmFilters.tsx  AtmPage.scss  AtmPage.tsx  BanksMap.tsx  OfficeFilters.scss  OfficeFilters.tsx  OfficePage.scss  OfficePage.tsx  SearchPage.scss  SearchPage.tsx  index.ts
frontend/src/types/: index.d.ts
frontend/src/utils/: backend.ts  colors.ts  hooks.ts  index.ts  (+1 more)
