[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["pibragimov <pibragimov@whoosh.bike>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
ujson = "^5.8.0"
fastapi = "^0.103.2"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
pyhumps = "^3.8.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
